--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="icon" type="image/svg+xml" href="/icon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MedTask - Em busca da aprovação!</title>
+
+    <!-- Meta Tags para SEO -->
+    <title>MedTask: Aprovação na Residência Médica com IA e Neurociência</title>
+    <meta name="description" content="Prepare-se para a Residência Médica com inteligência! Nosso método usa IA e neurociência para um estudo eficiente, estratégico e direcionado." />
+    <meta name="keywords" content="Residência médica, preparação para residência, estudo inteligente, IA para estudos, neurociência aplicada, revisão espaçada, banco de questões comentadas, mentoria para residência, método eficiente, cronograma de estudos, estratégia de estudos" />
+
+    <!-- Meta Tags para Redes Sociais (Open Graph) -->
+    <meta property="og:title" content="Aprovação na Residência Médica com IA e Neurociência | MedTask" />
+    <meta property="og:description" content="Prepare-se para a Residência Médica com inteligência! Nosso método usa IA e neurociência para um estudo eficiente, estratégico e direcionado." />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://medtask.com.br" />
+
+    <!-- Meta Tags para Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Aprovação na Residência Médica com IA e Neurociência | MedTask" />
+    <meta name="twitter:description" content="Prepare-se para a Residência Médica com inteligência! Nosso método usa IA e neurociência para um estudo eficiente, estratégico e direcionado." />
+    <meta name="twitter:image" content="/logo.png" />
+
+    <!-- Meta Robots (Controle de Indexação) -->
+    <meta name="robots" content="index, follow" />
+
+    <!-- Meta Charset e Compatibilidade -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   </head>
   <body>
     <div id="root"></div>
